k8s/apps/prod/ctf/PharmaNet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmanet
  namespace: ctf
spec:
  selector:
    matchLabels:
      app: pharmanet
  template:
    metadata:
      labels:
        app: pharmanet
    spec:
      containers:
        - name: pharmanet
          image: gitlab.oplabs.us:5050/root/ctf-web-pharmanet:latest
          pull-policy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
