k8s/apps/prod/ctf/PharmaNet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharmanet
  namespace: ctf
spec:
  selector:
    app: pharmanet
  ports:
    - port: 80
      targetPort: 80
